tests/NormalTests/paczka1/small_fuzzy/13661451.err
Error in line 8: cTc A542 44,1
Error in line 12: cTc A913 36,3
